--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -13,7 +13,7 @@
   
   <p>
     <label for="posted_on">Posted on</label>
-    <input type="integer" name="posted_on">
+    <input type="date" name="posted_on">
   </p>
   
   <p>
@@ -25,9 +25,3 @@
 </form>
 
 
-<!--
-      t.string "title"
-      t.text "description"
-      t.date "posted_on"
-      t.integer "place_id"
--->
