--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,3 +1,17 @@
 <h1><%= @place.name %></h1>
 
+<ul>
+  <% for entry in @entries %>
+    <li>
+    <%= entry["title"] %>,
+    <%= entry["description"] %>,
+    <%= entry["posted_on"] %>
+    </li>
+  <% end %>
+</ul>
+
+<p>
+  <a href="/entries/new?place_id=<%= @place["id"] %>">New Post</a>
+</p>
+
 <p><a href="/places">Back to Places</a></p>
