--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -5,20 +5,19 @@
     <label for="title">Title</label>
     <input type="text" name="title">
   </p>
-
-  <p>
-    <label for="description">Description</label>
-    <input type="text" name="description">
-  </p>
   
   <p>
     <label for="posted_on">Posted on</label>
     <input type="date" name="posted_on">
   </p>
-  
+
   <p>
-    <label for="place_id">Place</label>
-    <input type="text" name="place_id">
+    <label for="description">Description</label>
+    <input type="text" name="description">
+  </p>
+
+  <p>
+    <input type="hidden" name="place_id" value="<%= @place.id %>">
   </p>
 
   <button>Submit</button>
