--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -17,7 +17,7 @@
   </p>
 
   <p>
-    <input type="hidden" name="place_id" value="<%= @place.id %>">
+    <input type="hidden" name="place_id" value="<%= @place["id"] %>">
   </p>
 
   <button>Submit</button>
