--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,14 +4,14 @@
   <ul>
     <% for entry in @entries %>
       <li>
-        <h2><%= entry.title %></h2>
+        <h3><%= entry.title %></h3>
         <p><%= entry.posted_on %></p>
-        <h3><%= entry.description %></h3>
+        <h4><%= entry.description %></h4>
       </li>
     <% end %>
   </ul>
 <% else %>
-  <p>No posts available.</p>
+  <p>No posts available</p>
 <% end %>
 
 <p>
